name:            yesod-auth-ldap-extended
version:         0.0.0.2
license:         BSD3
license-file:    LICENSE
author:          Michael Litchard, Jan-Philip Loos
maintainer:      Jan-Philip Loos
synopsis:        LDAP Authentication, Verification and Registration for Yesod.
category:        Web, Yesod
stability:       experimental 
cabal-version:   >= 1.6.0
build-type:      Simple
homepage:        http://www.yesodweb.com/
extra-source-files: include/qq.h
description:     LDAP Authentication, Registration for Yesod. forked from yesod-auth-ldap by Michael Litchard

flag ghc7

library
    if flag(ghc7)
        build-depends:   base                >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                >= 4        && < 4.3
    build-depends:   LDAP                    == 0.6.6    
                   , bytestring              >= 0.9.1.4   && < 0.10
                   , yesod-core              >= 0.10      && < 0.11
                   , yesod-auth              >= 0.8       && < 0.9
                   , text                    >= 0.7       && < 0.12
                   , blaze-html              >= 0.4.3.1   && < 0.5
                   , hamlet                  >= 0.10      && < 0.11
                   , yesod-form              >= 0.4       && < 0.5
                   , transformers            >= 0.2.2     && < 0.3
                   , authenticate-ldap       == 0.2.0
                   , random                  >= 1.0.0.3   && < 1.1
                   , mime-mail               >= 0.3       && < 0.5

    exposed-modules: Yesod.Auth.LDAPExtended
                     Yesod.Auth.LdapMessages

    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/MaxDaten/yesod-auth-ldap-extended.git 
