name:            yesod-auth-ldap-extended
version:         0.0.1.1
license:         BSD3
license-file:    LICENSE
author:          Michael Litchard, Jan-Philip Loos
maintainer:      Jan-Philip Loos
synopsis:        LDAP Authentication, Verification and Registration for Yesod.
category:        Web, Yesod
stability:       experimental 
cabal-version:   >= 1.6.0
build-type:      Simple
homepage:        http://www.yesodweb.com/
extra-source-files: include/qq.h
description:     LDAP Authentication, Registration for Yesod. forked from yesod-auth-ldap by Michael Litchard

flag ghc7

library
    if flag(ghc7)
        build-depends:   base                >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                >= 4        && < 4.3
    build-depends:   LDAP                    == 0.6.6    
                   , bytestring              >= 0.9.1.4   && < 0.10
                   , yesod-core              >= 1.0       && < 1.1
                   , yesod-auth              >= 1.0       && < 1.1
                   , text                    >= 0.11      && < 0.12
                   , blaze-html              >= 0.4.3.1   && < 0.5
                   , hamlet                  >= 1.0       && < 1.1
                   , yesod-form              >= 1.0       && < 1.1
                   , transformers            >= 0.2.2     && < 0.3
                   , authenticate-ldap       == 0.2.1
                   , random                  >= 1.0.0.3   && < 1.1
                   , mime-mail               >= 0.3       && < 0.5

    exposed-modules: Yesod.Auth.Ldap.YesodAuthLdap
                     Yesod.Auth.LDAPExtended
                     Yesod.Auth.LdapMessages
    other-modules:   Yesod.Auth.Ldap.Handler.Password

    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/MaxDaten/yesod-auth-ldap-extended.git 
